# research

./: CMakeLists.txt
experiments/: dynamic_car_lqr_planning.cpp  find_lyap_for_pwa.cpp  load_traj_parl_dynamic_car.cpp  load_traj_parl_dynamic_car_no_time.cpp  manual_dynamic_car.cpp  parl_lqr.cpp  parl_planning_fixed_path.cpp  parl_planning_prototype.cpp  parl_planning_prototype_error_space.cpp  parl_planning_prototype_lqr.cpp  parl_r10c10_dc.cpp  parl_r10c10_h2d.cpp  parl_r10c10_kc.cpp  parl_r10c10_pend.cpp  parl_stability_pend.cpp  pendulum_lqr_planning.cpp  pid_dynamic_car.cpp  pid_parl_dynamic_car.cpp  plot_lyap.cpp  plot_pwa.cpp  plot_pwa_trajs.cpp  plot_traj_error.py  plot_traj_tracking_reward.cpp  record_traj.cpp  run_lqr.cpp  sst_pid_dynamic_car.cpp  test_lstd_on_traj.cpp  test_saving_pwa.cpp  test_simple_lyap.cpp  test_simple_lyap2.cpp  test_transition_map.cpp
experiments/parl_configs/: r10c10_1.yaml  r10c10_dc.yaml  (+4 more)
parl/: environment.hpp  hyperparams.cpp  hyperparams.hpp  hyperparams.test.cpp  linear_params.hpp  parl.cpp  parl.hpp  parl.test.cpp  runner.cpp  runner.hpp  runner.test.cpp
parl_planning/: aggregate_model.cpp  aggregate_model.hpp  error_space_executor.cpp  error_space_executor.hpp  executor.cpp  executor.hpp  lqr_control_space.cpp  lqr_control_space.hpp  lqr_executor.cpp  lqr_executor.hpp  lqr_state_propagator.cpp  lqr_state_propagator.hpp  ompl_utils.cpp  ompl_utils.hpp  parl_planner.cpp  parl_planner.hpp
parl_stability/: lyapunov_finding.cpp  lyapunov_finding.hpp  transition_map.cpp  transition_map.hpp  voronoi.cpp  voronoi.hpp
(+6 files in other folders)
